# kcare-uchecker

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  uchecker.py  update-deb.sh  update-rpm.sh  update.sh
.circleci/: config.yml
.github/workflows/: python-tests.yml
tests/: test_kernelcare.py
