[project]
name = "kcare-uchecker"
version = "0.1.2"
description = "A simple tool to detect outdated shared libraries"
authors = [
    { name = "Rinat Sabitov", email = "rinat.sabitov@gmail.com" },
]
license = { text = "GPL-2.0-only" }
readme = "README.md"
homepage = "https://kernelcare.com/"
repository = "https://github.com/cloudlinux/kcare-uchecker"
keywords = ["security-audit", "shared-libraries", "security-scanner", "security-tools", "secutiry"]
requires-python = ">=2.7"

dependencies = []

[project.scripts]
uchecker = "uchecker:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-coverage",
    "flake8",
]

